--- a/Tipo-de-Cambio/src/main/resources/application.properties
+++ b/Tipo-de-Cambio/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Tipo-de-Cambio
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuración de la base de datos en memoria
+spring.datasource.url=jdbc:h2:mem:tipocambio
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+
+# Hibernate (para que cree la tabla automáticamente)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+sring.h2.console.enabled=true
